# nist-special-database-19

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.xml  dbcreate.cpp  fann.cpp  hsfpageprocessing.cpp  hsfpageprocessing.h  imgui_util.cpp  imgui_util.h  misprocessing.cpp  misprocessing.h  mnist_fann.cpp  mnist_fann_extern.h  sd19config.cpp  sd19config.h  sd19test.cpp  showmis.cpp
.github/workflows/: github-actions.yaml
doctest/: CMakeLists.txt
fann/: CMakeLists.txt  fann.h  fann_train_data.cpp  parallel_fann.cpp
flatbuffers/: CMakeLists.txt  base.h  flatbuffer_builder.h  idl.h  idl_gen_text.cpp  idl_gen_text.h  idl_parser.cpp  minireflect.h  reflection.cpp  util.cpp
imgui/: CMakeLists.txt  implot.cpp  implot.h  implot_internal.h  implot_items.cpp
lodepng/: CMakeLists.txt
lut/: inv_bytes.lut
miniz/: CMakeLists.txt  miniz.cpp  miniz.h
mongoose/: CMakeLists.txt  mongoose.cpp  mongoose.h
pugixml/: CMakeLists.txt
sd19/: CMakeLists.txt  allocmis.cpp  allocmis.h  bincopy.cpp  bincopy.h  binfill.cpp  binfill.h  binops.h  bitmasks.cpp  bitmasks.h  bits.h  bits2bytes.cpp  bits2bytes.h  byte2bit.h  bytes2bits.cpp  char2bin.cpp  char2bin.h  chrpixel.cpp  chrpixel.h  corners.cpp  corners.h  defs.h  fatalerr.cpp  fatalerr.h  freemis.cpp  freemis.h  getnset.cpp  getnset.h  grp4comp.cpp  grp4comp.h  grp4decomp.cpp  grp4decomp.h  histgram.cpp  histgram.h  ihead.h  imageops.cpp  imageops.h  imagutil.cpp  imagutil.h  invbytes.cpp  (+42 more)
sd19db/: CMakeLists.txt  dbmanager.cpp  dbmanager.h  hsfpage.cpp  hsfpage.h  idbrepository.cpp  idbrepository.h  ihead.cpp  ihead.h  mis.cpp  mis.h  sd19db.cpp  sd19db.h
sd19python/: sd19python.sln
sd19python/sd19python/: Sd19Dataset.py  Sd19Net.py  Sd19TestDataset.py  Sd19TrainDataset.py  requirements.txt  sd19.py  sd19python.pyproj
sha256/: CMakeLists.txt  sha256_util.cpp  sha256_util.h
sqlite3/: CMakeLists.txt
sqlite_orm/: CMakeLists.txt  sqlite_orm.h
toojpeg/: CMakeLists.txt  toojpeg_helper.cpp  toojpeg_helper.h
ulog/: CMakeLists.txt  ulog.cpp  ulog.h
